# panda_desk

./: pyproject.toml
docs/: endpoints.md  websockets.md
scripts/: lock.py  set_gripper.py  unlock.py
src/panda_desk/: desk.py
