[project]
name = "panda_desk"
version = "0.8.1"
description = "Python bindings for the Panda robot's desk api"
readme = "README.md"
requires-python = ">=3.10"
authors =[
    { name = "Jean Elsner", email = "jean.elsner@tum.de"},
    { name = "Jad Abou-Chakra"},
]
keywords = ["python", "robot", "franka", "emika"]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

dependencies = [
    "trio", 
    "trio-websocket@git+https://github.com/jc211/trio-websocket",
    "trio_util",
    "httpx",
    "tyro",
    ]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
panda_desk = { path = ".", editable = true }

